{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 405,
  "lineage": "7b8ba1a9-c5ab-8a26-3c5a-baddaf3482cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tfTwentyOne1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:instance/i-014ce7b1f62aaf9e5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014ce7b1f62aaf9e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clouds2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b0a7d8e5f589674",
            "private_dns": "ip-172-16-0-221.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.221",
            "public_dns": "ec2-54-180-9-100.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.9.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09f810cea952a23c4",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbbf20aaaa60b1f8",
            "tags": {
              "Name": "tfTwentyOne1"
            },
            "tags_all": {
              "Name": "tfTwentyOne1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb7cb35b91ff9fd9"
            ]
          },
          "dependencies": [
            "aws_instance.tfTwentyOne2",
            "aws_instance.tfTwentyOne3",
            "data.template_file.fastapi_userdata",
            "data.template_file.nginx_userdata",
            "module.private_subnet1.aws_security_group.sg2",
            "module.private_subnet1.aws_subnet.subnet2",
            "module.private_subnet2.aws_security_group.sg3",
            "module.private_subnet2.aws_subnet.subnet3",
            "module.public_subnet.aws_security_group.public_sg",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tfTwentyOne2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:instance/i-077b79c65a607beed",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077b79c65a607beed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clouds2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b543bc73cc0eceb5",
            "private_dns": "ip-172-16-2-182.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bec1a5c82bc55b70",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d6393d3fe0a57d8",
            "tags": {
              "Name": "tfTwentyOne2"
            },
            "tags_all": {
              "Name": "tfTwentyOne2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b746a03141c5561"
            ]
          },
          "dependencies": [
            "aws_instance.tfTwentyOne3",
            "data.template_file.fastapi_userdata",
            "module.private_subnet1.aws_security_group.sg2",
            "module.private_subnet1.aws_subnet.subnet2",
            "module.private_subnet2.aws_security_group.sg3",
            "module.private_subnet2.aws_subnet.subnet3",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tfTwentyOne3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:instance/i-06389a18d44dd62e3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06389a18d44dd62e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clouds2024",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07106f16c716eec4b",
            "private_dns": "ip-172-16-3-57.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.3.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04e20003abf187a7e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d32e09a8408d490",
            "tags": {
              "Name": "tfTwentyOne3"
            },
            "tags_all": {
              "Name": "tfTwentyOne3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da6ad2d7910cf3db"
            ]
          },
          "dependencies": [
            "module.private_subnet2.aws_security_group.sg3",
            "module.private_subnet2.aws_subnet.subnet3",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059421862bc1b02bd",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:elastic-ip/eipalloc-059421862bc1b02bd",
            "domain": "vpc",
            "id": "eipalloc-059421862bc1b02bd",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-155-105.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.155.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tfNineteen_eip"
            },
            "tags_all": {
              "Name": "tfNineteen_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059421862bc1b02bd",
            "association_id": "eipassoc-044eda833c79b96ff",
            "connectivity_type": "public",
            "id": "nat-02a5bc7748019eaae",
            "network_interface_id": "eni-0e0203353b1209ac2",
            "private_ip": "172.16.0.178",
            "public_ip": "3.37.155.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cbbf20aaaa60b1f8",
            "tags": {
              "Name": "tfNineteen_natgw"
            },
            "tags_all": {
              "Name": "tfNineteen_natgw"
            }
          },
          "dependencies": [
            "module.private_subnet1.aws_eip.eip",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:route-table/rtb-00f7c914f28e32eeb",
            "id": "rtb-00f7c914f28e32eeb",
            "owner_id": "637423323447",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a5bc7748019eaae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnet1.aws_eip.eip",
            "module.private_subnet1.aws_nat_gateway.natgw",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb2asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027dce3515c72d173",
            "route_table_id": "rtb-00f7c914f28e32eeb",
            "subnet_id": "subnet-00d6393d3fe0a57d8"
          },
          "dependencies": [
            "module.private_subnet1.aws_eip.eip",
            "module.private_subnet1.aws_nat_gateway.natgw",
            "module.private_subnet1.aws_route_table.rtb2",
            "module.private_subnet1.aws_subnet.subnet2",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:security-group/sg-04b746a03141c5561",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b746a03141c5561",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terraform-20240913084418219600000003",
            "name_prefix": "terraform-",
            "owner_id": "637423323447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfNineteen_sg2"
            },
            "tags_all": {
              "Name": "tfNineteen_sg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:subnet/subnet-00d6393d3fe0a57d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d6393d3fe0a57d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423323447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfNineteen_subnet2"
            },
            "tags_all": {
              "Name": "tfNineteen_subnet2"
            },
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003f32bcdf7e2ff64",
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:elastic-ip/eipalloc-003f32bcdf7e2ff64",
            "domain": "vpc",
            "id": "eipalloc-003f32bcdf7e2ff64",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-200-53-46.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.53.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tfNineteen_eip"
            },
            "tags_all": {
              "Name": "tfNineteen_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003f32bcdf7e2ff64",
            "association_id": "eipassoc-0c16cf2ae210bfa9e",
            "connectivity_type": "public",
            "id": "nat-095b166ea16ae3fcd",
            "network_interface_id": "eni-08ffde597d1b7aa62",
            "private_ip": "172.16.0.175",
            "public_ip": "43.200.53.46",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cbbf20aaaa60b1f8",
            "tags": {
              "Name": "tfNineteen_natgw"
            },
            "tags_all": {
              "Name": "tfNineteen_natgw"
            }
          },
          "dependencies": [
            "module.private_subnet2.aws_eip.eip",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:route-table/rtb-0a9ed157eee8d4a28",
            "id": "rtb-0a9ed157eee8d4a28",
            "owner_id": "637423323447",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-095b166ea16ae3fcd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnet2.aws_eip.eip",
            "module.private_subnet2.aws_nat_gateway.natgw",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb3asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6dc575d4a627266",
            "route_table_id": "rtb-0a9ed157eee8d4a28",
            "subnet_id": "subnet-07d32e09a8408d490"
          },
          "dependencies": [
            "module.private_subnet2.aws_eip.eip",
            "module.private_subnet2.aws_nat_gateway.natgw",
            "module.private_subnet2.aws_route_table.rtb3",
            "module.private_subnet2.aws_subnet.subnet3",
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:security-group/sg-0da6ad2d7910cf3db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da6ad2d7910cf3db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240913084418217800000001",
            "name_prefix": "terraform-",
            "owner_id": "637423323447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfNineteen_sg3"
            },
            "tags_all": {
              "Name": "tfNineteen_sg3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:subnet/subnet-07d32e09a8408d490",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d32e09a8408d490",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423323447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfNineteen_subnet3"
            },
            "tags_all": {
              "Name": "tfNineteen_subnet3"
            },
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:internet-gateway/igw-07b768676778a90ed",
            "id": "igw-07b768676778a90ed",
            "owner_id": "637423323447",
            "tags": {
              "Name": "tf_igw"
            },
            "tags_all": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:route-table/rtb-07d3de208ab6a9fd8",
            "id": "rtb-07d3de208ab6a9fd8",
            "owner_id": "637423323447",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b768676778a90ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtbasso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8006e1bef7fbf05",
            "route_table_id": "rtb-07d3de208ab6a9fd8",
            "subnet_id": "subnet-0cbbf20aaaa60b1f8"
          },
          "dependencies": [
            "module.public_subnet.aws_internet_gateway.igw",
            "module.public_subnet.aws_route_table.public_rtb",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:security-group/sg-0fb7cb35b91ff9fd9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb7cb35b91ff9fd9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240913084418219200000002",
            "name_prefix": "terraform-",
            "owner_id": "637423323447",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_public_sg"
            },
            "tags_all": {
              "Name": "tf_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:subnet/subnet-0cbbf20aaaa60b1f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbbf20aaaa60b1f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423323447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_public_subnet"
            },
            "tags_all": {
              "Name": "tf_public_subnet"
            },
            "vpc_id": "vpc-0b1206d4ea58a3aae"
          },
          "dependencies": [
            "module.public_subnet.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423323447:vpc/vpc-0b1206d4ea58a3aae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/20",
            "default_network_acl_id": "acl-01af861f8a51ceedb",
            "default_route_table_id": "rtb-0035a668f38c0f3dd",
            "default_security_group_id": "sg-088cd9b4d9d8901d4",
            "dhcp_options_id": "dopt-0d70a97a17464aba0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1206d4ea58a3aae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0035a668f38c0f3dd",
            "owner_id": "637423323447",
            "tags": {
              "Name": "tf_vpc"
            },
            "tags_all": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}